added nuget references

--- a/src/Cake.DotNetCoreSonar/Cake.DotNetCoreSonar.csproj
+++ b/src/Cake.DotNetCoreSonar/Cake.DotNetCoreSonar.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Cake.Common" Version="0.28.1" />
+  </ItemGroup>
+
 </Project>
